Add new java 19 array impl